feat: add authorisation to swagger docs
